# example_use_current_with_cmake

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
src/: demo_trivial_dep.cc  gen_primes.h  print_primes.cc  process_primes.cc  process_shallow_primes.cc  schema.h  shallow_schema.h  test_primes.cc  write_primes.cc
